[gd_scene load_steps=8 format=3 uid="uid://cu135irb6ogv2"]

[ext_resource type="Texture2D" uid="uid://dds8vaifd13lo" path="res://UI/Assets/Micah case/Case.png" id="1_ox3xg"]
[ext_resource type="Script" path="res://UI/Case_pickNum.gd" id="1_x4gww"]
[ext_resource type="PackedScene" uid="uid://ectnv6dstuhg" path="res://UI/NumChange.tscn" id="3_s78rs"]
[ext_resource type="Texture2D" uid="uid://n21mywrvi7ij" path="res://UI/Assets/Interactions/Back orange normal.png" id="4_d0hjb"]
[ext_resource type="Texture2D" uid="uid://dxfrr333thc3t" path="res://UI/Assets/Interactions/Back orange hovered.png" id="5_d4tk5"]
[ext_resource type="Texture2D" uid="uid://d341pcke8p1jd" path="res://UI/Assets/Interactions/Back orange disabled.png" id="6_xd1kt"]

[sub_resource type="CanvasTexture" id="CanvasTexture_f3aw6"]

[node name="Case UI" type="CanvasLayer"]
script = ExtResource("1_x4gww")

[node name="Background2" type="TextureRect" parent="."]
modulate = Color(0.32549, 0.227451, 0.184314, 0.458824)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_f3aw6")

[node name="Case" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -825.0
offset_top = -215.0
offset_right = 825.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ox3xg")

[node name="Pos1" parent="." instance=ExtResource("3_s78rs")]

[node name="0" parent="Pos1" index="0"]
offset_left = 210.0
offset_top = 580.0
offset_right = 275.0
offset_bottom = 695.0

[node name="1" parent="Pos1" index="1"]
offset_left = 210.0
offset_top = 580.0
offset_right = 275.0
offset_bottom = 695.0

[node name="2" parent="Pos1" index="2"]
offset_left = 210.0
offset_top = 580.0
offset_right = 275.0
offset_bottom = 695.0

[node name="3" parent="Pos1" index="3"]
offset_left = 210.0
offset_top = 580.0
offset_right = 275.0
offset_bottom = 695.0

[node name="4" parent="Pos1" index="4"]
offset_left = 210.0
offset_top = 580.0
offset_right = 275.0
offset_bottom = 695.0

[node name="5" parent="Pos1" index="5"]
offset_left = 210.0
offset_top = 580.0
offset_right = 275.0
offset_bottom = 695.0

[node name="6" parent="Pos1" index="6"]
offset_left = 210.0
offset_top = 580.0
offset_right = 275.0
offset_bottom = 695.0

[node name="7" parent="Pos1" index="7"]
offset_left = 210.0
offset_top = 580.0
offset_right = 275.0
offset_bottom = 695.0

[node name="8" parent="Pos1" index="8"]
offset_left = 210.0
offset_top = 580.0
offset_right = 275.0
offset_bottom = 695.0

[node name="9" parent="Pos1" index="9"]
offset_left = 210.0
offset_top = 580.0
offset_right = 275.0
offset_bottom = 695.0

[node name="Up" parent="Pos1" index="10"]
offset_left = 210.0
offset_top = 536.0
offset_right = 275.0
offset_bottom = 576.0

[node name="Down" parent="Pos1" index="11"]
offset_left = 210.0
offset_top = 706.0
offset_right = 275.0
offset_bottom = 746.0

[node name="Pos2" parent="." instance=ExtResource("3_s78rs")]

[node name="0" parent="Pos2" index="0"]
offset_left = 310.0
offset_top = 580.0
offset_right = 375.0
offset_bottom = 695.0

[node name="1" parent="Pos2" index="1"]
offset_left = 310.0
offset_top = 580.0
offset_right = 375.0
offset_bottom = 695.0

[node name="2" parent="Pos2" index="2"]
offset_left = 310.0
offset_top = 580.0
offset_right = 375.0
offset_bottom = 695.0

[node name="3" parent="Pos2" index="3"]
offset_left = 310.0
offset_top = 580.0
offset_right = 375.0
offset_bottom = 695.0

[node name="4" parent="Pos2" index="4"]
offset_left = 310.0
offset_top = 580.0
offset_right = 375.0
offset_bottom = 695.0

[node name="5" parent="Pos2" index="5"]
offset_left = 310.0
offset_top = 580.0
offset_right = 375.0
offset_bottom = 695.0

[node name="6" parent="Pos2" index="6"]
offset_left = 310.0
offset_top = 580.0
offset_right = 375.0
offset_bottom = 695.0

[node name="7" parent="Pos2" index="7"]
offset_left = 310.0
offset_top = 580.0
offset_right = 375.0
offset_bottom = 695.0

[node name="8" parent="Pos2" index="8"]
offset_left = 310.0
offset_top = 580.0
offset_right = 375.0
offset_bottom = 695.0

[node name="9" parent="Pos2" index="9"]
offset_left = 310.0
offset_top = 580.0
offset_right = 375.0
offset_bottom = 695.0

[node name="Up" parent="Pos2" index="10"]
offset_left = 310.0
offset_top = 536.0
offset_right = 375.0
offset_bottom = 576.0

[node name="Down" parent="Pos2" index="11"]
offset_left = 310.0
offset_top = 706.0
offset_right = 375.0
offset_bottom = 746.0

[node name="Pos3" parent="." instance=ExtResource("3_s78rs")]

[node name="0" parent="Pos3" index="0"]
offset_left = 410.0
offset_top = 580.0
offset_right = 475.0
offset_bottom = 695.0

[node name="1" parent="Pos3" index="1"]
offset_left = 410.0
offset_top = 580.0
offset_right = 475.0
offset_bottom = 695.0

[node name="2" parent="Pos3" index="2"]
offset_left = 410.0
offset_top = 580.0
offset_right = 475.0
offset_bottom = 695.0

[node name="3" parent="Pos3" index="3"]
offset_left = 410.0
offset_top = 580.0
offset_right = 475.0
offset_bottom = 695.0

[node name="4" parent="Pos3" index="4"]
offset_left = 410.0
offset_top = 580.0
offset_right = 475.0
offset_bottom = 695.0

[node name="5" parent="Pos3" index="5"]
offset_left = 410.0
offset_top = 580.0
offset_right = 475.0
offset_bottom = 695.0

[node name="6" parent="Pos3" index="6"]
offset_left = 410.0
offset_top = 580.0
offset_right = 475.0
offset_bottom = 695.0

[node name="7" parent="Pos3" index="7"]
offset_left = 410.0
offset_top = 580.0
offset_right = 475.0
offset_bottom = 695.0

[node name="8" parent="Pos3" index="8"]
offset_left = 410.0
offset_top = 580.0
offset_right = 475.0
offset_bottom = 695.0

[node name="9" parent="Pos3" index="9"]
offset_left = 410.0
offset_top = 580.0
offset_right = 475.0
offset_bottom = 695.0

[node name="Up" parent="Pos3" index="10"]
offset_left = 410.0
offset_top = 536.0
offset_right = 475.0
offset_bottom = 576.0

[node name="Down" parent="Pos3" index="11"]
offset_left = 410.0
offset_top = 706.0
offset_right = 475.0
offset_bottom = 746.0

[node name="Pos4" parent="." instance=ExtResource("3_s78rs")]

[node name="0" parent="Pos4" index="0"]
offset_left = 510.0
offset_top = 580.0
offset_right = 575.0
offset_bottom = 695.0

[node name="1" parent="Pos4" index="1"]
offset_left = 510.0
offset_top = 580.0
offset_right = 575.0
offset_bottom = 695.0

[node name="2" parent="Pos4" index="2"]
offset_left = 510.0
offset_top = 580.0
offset_right = 575.0
offset_bottom = 695.0

[node name="3" parent="Pos4" index="3"]
offset_left = 510.0
offset_top = 580.0
offset_right = 575.0
offset_bottom = 695.0

[node name="4" parent="Pos4" index="4"]
offset_left = 510.0
offset_top = 580.0
offset_right = 575.0
offset_bottom = 695.0

[node name="5" parent="Pos4" index="5"]
offset_left = 510.0
offset_top = 580.0
offset_right = 575.0
offset_bottom = 695.0

[node name="6" parent="Pos4" index="6"]
offset_left = 510.0
offset_top = 580.0
offset_right = 575.0
offset_bottom = 695.0

[node name="7" parent="Pos4" index="7"]
offset_left = 510.0
offset_top = 580.0
offset_right = 575.0
offset_bottom = 695.0

[node name="8" parent="Pos4" index="8"]
offset_left = 510.0
offset_top = 580.0
offset_right = 575.0
offset_bottom = 695.0

[node name="9" parent="Pos4" index="9"]
offset_left = 510.0
offset_top = 580.0
offset_right = 575.0
offset_bottom = 695.0

[node name="Up" parent="Pos4" index="10"]
offset_left = 510.0
offset_top = 536.0
offset_right = 575.0
offset_bottom = 576.0

[node name="Down" parent="Pos4" index="11"]
offset_left = 510.0
offset_top = 706.0
offset_right = 575.0
offset_bottom = 746.0

[node name="Pos5" parent="." instance=ExtResource("3_s78rs")]

[node name="0" parent="Pos5" index="0"]
offset_left = 610.0
offset_top = 580.0
offset_right = 675.0
offset_bottom = 695.0

[node name="1" parent="Pos5" index="1"]
offset_left = 610.0
offset_top = 580.0
offset_right = 675.0
offset_bottom = 695.0

[node name="2" parent="Pos5" index="2"]
offset_left = 610.0
offset_top = 580.0
offset_right = 675.0
offset_bottom = 695.0

[node name="3" parent="Pos5" index="3"]
offset_left = 610.0
offset_top = 580.0
offset_right = 675.0
offset_bottom = 695.0

[node name="4" parent="Pos5" index="4"]
offset_left = 610.0
offset_top = 580.0
offset_right = 675.0
offset_bottom = 695.0

[node name="5" parent="Pos5" index="5"]
offset_left = 610.0
offset_top = 580.0
offset_right = 675.0
offset_bottom = 695.0

[node name="6" parent="Pos5" index="6"]
offset_left = 610.0
offset_top = 580.0
offset_right = 675.0
offset_bottom = 695.0

[node name="7" parent="Pos5" index="7"]
offset_left = 610.0
offset_top = 580.0
offset_right = 675.0
offset_bottom = 695.0

[node name="8" parent="Pos5" index="8"]
offset_left = 610.0
offset_top = 580.0
offset_right = 675.0
offset_bottom = 695.0

[node name="9" parent="Pos5" index="9"]
offset_left = 610.0
offset_top = 580.0
offset_right = 675.0
offset_bottom = 695.0

[node name="Up" parent="Pos5" index="10"]
offset_left = 610.0
offset_top = 536.0
offset_right = 675.0
offset_bottom = 576.0

[node name="Down" parent="Pos5" index="11"]
offset_left = 610.0
offset_top = 706.0
offset_right = 675.0
offset_bottom = 746.0

[node name="Pos6" parent="." instance=ExtResource("3_s78rs")]

[node name="0" parent="Pos6" index="0"]
offset_left = 710.0
offset_top = 580.0
offset_right = 775.0
offset_bottom = 695.0

[node name="1" parent="Pos6" index="1"]
offset_left = 710.0
offset_top = 580.0
offset_right = 775.0
offset_bottom = 695.0

[node name="2" parent="Pos6" index="2"]
offset_left = 710.0
offset_top = 580.0
offset_right = 775.0
offset_bottom = 695.0

[node name="3" parent="Pos6" index="3"]
offset_left = 710.0
offset_top = 580.0
offset_right = 775.0
offset_bottom = 695.0

[node name="4" parent="Pos6" index="4"]
offset_left = 710.0
offset_top = 580.0
offset_right = 775.0
offset_bottom = 695.0

[node name="5" parent="Pos6" index="5"]
offset_left = 710.0
offset_top = 580.0
offset_right = 775.0
offset_bottom = 695.0

[node name="6" parent="Pos6" index="6"]
offset_left = 710.0
offset_top = 580.0
offset_right = 775.0
offset_bottom = 695.0

[node name="7" parent="Pos6" index="7"]
offset_left = 710.0
offset_top = 580.0
offset_right = 775.0
offset_bottom = 695.0

[node name="8" parent="Pos6" index="8"]
offset_left = 710.0
offset_top = 580.0
offset_right = 775.0
offset_bottom = 695.0

[node name="9" parent="Pos6" index="9"]
offset_left = 710.0
offset_top = 580.0
offset_right = 775.0
offset_bottom = 695.0

[node name="Up" parent="Pos6" index="10"]
offset_left = 710.0
offset_top = 536.0
offset_right = 775.0
offset_bottom = 576.0

[node name="Down" parent="Pos6" index="11"]
offset_left = 710.0
offset_top = 706.0
offset_right = 775.0
offset_bottom = 746.0

[node name="Exit" type="TextureButton" parent="."]
offset_left = 52.0
offset_top = 31.0
offset_right = 152.0
offset_bottom = 131.0
texture_normal = ExtResource("4_d0hjb")
texture_pressed = ExtResource("5_d4tk5")
texture_hover = ExtResource("5_d4tk5")
texture_disabled = ExtResource("6_xd1kt")

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]

[editable path="Pos1"]
[editable path="Pos2"]
[editable path="Pos3"]
[editable path="Pos4"]
[editable path="Pos5"]
[editable path="Pos6"]
